# torrent-downloader-telegram-bot

./: .dockerignore  .env.example  .gitignore  .rsync-exclude  Dockerfile  README.md  alembic.ini  bot_container_starter.sh  docker-compose.yml  pyproject.toml  qbittorrent_password_extractor.sh  torrent_downloader.ddl
alembic/: env.py
alembic/versions/: 2024_12_06_0040-4e7672b51420_init.py  2024_12_08_1328-bd29465f2e13_many_to_many_rel.py  2024_12_12_2109-0bb054c1af99_changed_torrent_content_relation.py  2024_12_13_2045-83ce0b3d008a_added_user_content_many_to_many_rel.py  2024_12_13_2102-646ef1e59b2c_added_index_field_to_content.py  2025_06_07_0041-7cba2cbe9196_add_sa_biginteger_to_user_tg_id_attr.py  2025_06_07_1752-588ce1da486f_add_user_is_blocked_attr_default_true.py  2025_06_14_0005-3467f06af40f_add_is_unblocking_message_sent_attr_to_.py  2025_06_30_1742-ac4502808210_remove_content_attrs_is_deleted_file_.py
app/: celery_queue.py  config.py  dao.py  database.py  models.py
app/bot/: bot.py  messages.py  repo_bot.py  service.py  structures.py  utils.py
app/client/: qbittorrent.py
app/common/: messages.py
app/downloader/: downloader.py  service.py
app/entities/content/: dao.py  manager.py  service.py
app/entities/torrent/: dao.py  manager.py  schema.py  service.py
app/entities/user/: dao.py  manager.py  schema.py  service.py
app/tasks/: schedule.py  service.py  tasks.py  upload_task.py  uploader.py
app/torrent_client/: qbittorrent.py
app/uploader/: create_pyrogram_session.py  uploader.py
app/watchdog/: watchdog.py
